@@ -261,7 +261,6 @@ LIBRPM_0
     _rpmsx_debug;
     rpmsxFContext;
     rpmsxFMode;
-    rpmsxFree;
     rpmsxFStem;
     rpmsxInit;
     rpmsxIx;
@@ -290,7 +289,6 @@ LIBRPM_0
     rpmteFd;
     rpmteFI;
     rpmteFlink;
-    rpmteFree;
     rpmteFreeTSI;
     rpmteHdrid;
     rpmteHeader;
